# snow

./: .gitignore
extension/: background.js  block_handler.js  blocked_by_ai.html  content.js  explicit_block.html  manifest.json  structure.txt
extension/popup/: popup.css  popup.html  popup.js
mcp/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py  tools.py
website/: .gitignore  README.md  promptEngHistory.txt
website/backend/: FrontendDataHandler.java  JsonUtils.java  Main.java  NoteManager.java  NotePersistence.java  ScheduleManager.java  TaskPersistence.java  WebServer.java  run.sh
website/backend/objects/: AIResponseHandler.java  Agent.java  GeminiConfig.java  Note.java  NoteActionHandler.java  ScheduleActionHandler.java  Task.java  Timer.java
website/backend/webserver/: AIHandlers.java  NoteHandlers.java  StaticFileHandler.java  StatsHandlers.java  TaskHandlers.java  TimerHandlers.java
website/frontend/: ai.html  ai.js  index.html  note.html  note.js  notification-sounds.js  progress.html  progress.js  schedule.html  schedule.js  script.js  settings.css  settings.html  settings.js  styles.css  timer-monitor.js  timer.css  timer.html  timer.js
