[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-mcp"
version = "0.1.0"
description = "MCP server for AI productivity planner agent"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.scripts]
ai-agent-mcp = "server:main"
